--- a/flask/app/templates/base.html
+++ b/flask/app/templates/base.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
      {% if title %}
         <title>{{ title }} - 博客</title>
-        {% else %}
+    {% else %}
         <title>欢迎来到博客!</title>
-        {% endif %}
+    {% endif %}
     </head>
     <body>
-       <div>博客 : <a href="/index">首页</a></div>
+        <div>博客 :
+           <a href="{{ url_for('index') }}">首页</a>
+           <a href="{{ url_for('login') }}">login</a>
+        </div>
+        {% with messages = get_flashed_messages() %}
+            <ur>
+                {% for message in messages %}
+                    <li>{{ message }}</li>
+                {% endfor %}
+            </ur>
+        {% endwith %}
         {% block content %}
 
         {% endblock %}
