--- a/flask/app/templates/login.html
+++ b/flask/app/templates/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <h>Login</h>
+    <p>register? <a href="{{ url_for('register') }}">REGISTER</a></p>
     <form action="" method="post">
         {{ form.hidden_tag() }}
         <p>
